[gd_scene load_steps=10 format=3 uid="uid://becb6m43g2mja"]

[ext_resource type="PackedScene" uid="uid://dxld6p7bttxv8" path="res://scenes/rooms/Room.tscn" id="1_jkw84"]
[ext_resource type="Script" uid="uid://bcpqc6ww7bsm" path="res://scripts/core/World.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://dfl28fd40ljiv" path="res://scenes/entities/Slime.tscn" id="2_ilat6"]
[ext_resource type="Texture2D" uid="uid://cyyl2bfji2blu" path="res://underBars.png" id="3_qpv4b"]
[ext_resource type="Texture2D" uid="uid://bf2dbre7jmvvr" path="res://speedProgress.png" id="4_eggmk"]
[ext_resource type="Texture2D" uid="uid://crbkdubykprax" path="res://frenzyProgress.png" id="5_e4edk"]
[ext_resource type="Texture2D" uid="uid://dfjiqitsh4t4k" path="res://momentumProgress.png" id="6_f7wa7"]
[ext_resource type="Texture2D" uid="uid://bb1b5j1dye7ik" path="res://focusProgress.png" id="7_in13f"]
[ext_resource type="Texture2D" uid="uid://bwa6sswbsb7u4" path="res://healthProgress.png" id="8_8j300"]

[node name="World" type="Node2D"]
script = ExtResource("1_script")

[node name="RoomManager" type="Node" parent="."]

[node name="Room" parent="RoomManager" instance=ExtResource("1_jkw84")]
position = Vector2(160, 160)

[node name="Slime" parent="." instance=ExtResource("2_ilat6")]
position = Vector2(145, 84)
max_momentum = 200.0
momentum_gain_rate = 5.0
momentum_speed_multiplier = 0.5
base_max_health = 50.0
bounciness = 0.99

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(160, 160)
offset = Vector2(0, -0.22)
zoom = Vector2(1.995, 1.995)

[node name="CameraTarget" type="Marker2D" parent="."]

[node name="statsBars" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 0.64400005
anchor_bottom = 0.41900003
offset_left = 319.0
offset_top = 17.0
offset_right = 393.0
offset_bottom = 57.0
theme_override_constants/separation = 0

[node name="slimeSpeedBar" type="TextureProgressBar" parent="statsBars"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 30.0
texture_under = ExtResource("3_qpv4b")
texture_progress = ExtResource("4_eggmk")
texture_progress_offset = Vector2(0, 1)

[node name="slimeMomentumBar" type="TextureProgressBar" parent="statsBars"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 50.0
texture_under = ExtResource("3_qpv4b")
texture_progress = ExtResource("6_f7wa7")
texture_progress_offset = Vector2(0, 1)

[node name="slimeFrenzyBar" type="TextureProgressBar" parent="statsBars"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 40.0
texture_under = ExtResource("3_qpv4b")
texture_progress = ExtResource("5_e4edk")
texture_progress_offset = Vector2(0, 1)

[node name="slimeAutoSeekBar" type="TextureProgressBar" parent="statsBars"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 60.0
texture_under = ExtResource("3_qpv4b")
texture_progress = ExtResource("7_in13f")
texture_progress_offset = Vector2(0, 1)

[node name="slimeHealthBar" type="TextureProgressBar" parent="statsBars"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 70.0
texture_under = ExtResource("3_qpv4b")
texture_progress = ExtResource("8_8j300")
texture_progress_offset = Vector2(0, 1)
